fix: Missing background color of items into blog paginated pages #24

--- a/core/assets/css/ds__colors.css
+++ b/core/assets/css/ds__colors.css
@@ -459,7 +459,7 @@ main .sandbox__iframe_wrapper a,
 
 /* BLOG */
 .blog-post-link {
-    background-color: var(--ita-neutral-100);
+    background-color: var(--ita-colors-neutral-100);
     border-color: var(--ita-colors-neutral-500);
 }
 
